--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,9 @@ android {
     buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.example.landpurchase"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 29
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -20,10 +21,62 @@ android {
 }
 
 dependencies {
+    /**facebook account kit**/
+    implementation 'com.facebook.android:account-kit-sdk:5.+'
+    implementation 'com.facebook.android:facebook-share:4.42.0'
+    //slider
+    implementation 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.daimajia.slider:library:1.1.5@aar'
+
+    /**google service**/
+    implementation 'com.google.android.gms:play-services-places:17.0.0'
+    /**implementation 'com.google.android.libraries.places:places-compat:1.1.0'**/
+    implementation 'com.google.android.libraries.places:places:2.2.0'
+
+
+    /**counterFAB**/
+    implementation 'com.github.andremion:counterfab:1.0.1'
+
+    /**Paypal**/
+    implementation 'com.paypal.sdk:paypal-android-sdk:2.15.3'
+
+    /**Font**/
+    implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
+
+    implementation 'com.github.mancj:MaterialSearchBar:0.8.2'
+
+
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
+    implementation 'com.github.d-max:spots-dialog:0.7@aar'
+    implementation 'com.google.firebase:firebase-messaging:20.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.stepstone.apprating:app-rating:2.0.0'
+    implementation 'io.paperdb:paperdb:2.1'
+    implementation 'com.github.rey5137:material:1.2.4'
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    //noinspection GradleCompatible
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.firebase:firebase-core:17.2.2'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    implementation 'com.google.firebase:firebase-database:19.2.1'
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+    implementation 'com.google.android.material:material:1.1.0'
+
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.firebaseui:firebase-ui-database:5.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+
 }
+apply plugin: 'com.google.gms.google-services'
