--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,5 +82,12 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-database:5.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 
+    /**sweetalert dialog**/
+    implementation 'com.github.f0ris.sweetalert:library:1.5.1'
+
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation project(':mpesa-stkpush')
+
 }
 apply plugin: 'com.google.gms.google-services'
